@@ -22,16 +22,11 @@
 
 extern int __rtai_muxid;
 
-int __init_skin(void);
-
 int rt_event_create (RT_EVENT *event,
 		     const char *name,
 		     unsigned long ivalue,
 		     int mode)
 {
-    if (__rtai_muxid < 0 && __init_skin() < 0)
-	return -ENOSYS;
-
     return XENOMAI_SKINCALL4(__rtai_muxid,
 			     __rtai_event_create,
 			     event,
@@ -43,9 +38,6 @@ int rt_event_create (RT_EVENT *event,
 int rt_event_bind (RT_EVENT *event,
 		   const char *name)
 {
-    if (__rtai_muxid < 0 && __init_skin() < 0)
-	return -ENOSYS;
-
     return XENOMAI_SKINCALL2(__rtai_muxid,
 			     __rtai_event_bind,
 			     event,
